Fixed some spacing issues with headers

--- a/compiled/css/main.css
+++ b/compiled/css/main.css
@@ -6293,6 +6293,12 @@ a:hover {
 .float--left {
   float: left;
 }
+.space__bt--10 {
+  margin-bottom: 10px;
+}
+.space__bt--20 {
+  margin-bottom: 20px;
+}
 .space__bt--30 {
   margin-bottom: 30px;
 }
