--- a/src/css/util/spacing.less
+++ b/src/css/util/spacing.less
@@ -1,4 +1,11 @@
 
+.space__bt--10 {
+  margin-bottom: 10px;
+}
+.space__bt--20 {
+  margin-bottom: 20px;
+}
+
 .space__bt--30 {
   margin-bottom: 30px;
 }
